# google-cloud-service-extensions

./: .gitignore  README.md
cloudrun-wasm/: .gitignore  CODE_PRINCIPLES.md  CONTRIBUTING.md  DATA_STRUCTURES.md  PROJECT_OVERVIEW.md  README.md  TODO.md
cloudrun-wasm/01-edge-security/: .gitignore  Cargo.toml  Makefile  README.md  cloudbuild.yaml
cloudrun-wasm/01-edge-security/infrastructure/backend/: Dockerfile  README.md  app.py  requirements.txt
cloudrun-wasm/01-edge-security/infrastructure/docker/: Dockerfile.envoy  docker-compose.yaml
cloudrun-wasm/01-edge-security/infrastructure/envoy/: envoy.yaml
cloudrun-wasm/01-edge-security/infrastructure/gcp/: load-balancer.tf  wasm-plugin.yaml
cloudrun-wasm/01-edge-security/scripts/: 01-build.sh  03-test.sh  99-remove.sh  build.sh  deploy.sh  test.sh
cloudrun-wasm/01-edge-security/src/: lib.rs  patterns.rs
cloudrun-wasm/02-smart-router/: Cargo.toml  Makefile  README.md  cloudbuild.yaml
cloudrun-wasm/02-smart-router/infrastructure/backend/: Dockerfile  README.md  app.py  requirements.txt
cloudrun-wasm/02-smart-router/infrastructure/docker/: Dockerfile.envoy  docker-compose.yaml
cloudrun-wasm/02-smart-router/infrastructure/envoy/: envoy.yaml
cloudrun-wasm/02-smart-router/infrastructure/gcp/: load-balancer.tf  wasm-plugin.yaml
cloudrun-wasm/02-smart-router/scripts/: 99-remove.sh  build.sh  deploy.sh  test.sh
cloudrun-wasm/02-smart-router/src/: lib.rs
