[package]
name = "edge_security"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "PII scrubbing Wasm filter for GCP Service Extensions"
authors = ["cloudrun-wasm-demos"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Proxy-Wasm SDK for building Envoy/GCP Service Extensions filters
proxy-wasm = "0.2"

# Logging support
log = "0.4"

# JSON parsing for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for PII pattern matching
# Using regex-lite instead of regex to reduce Wasm binary size (~500KB smaller)
# IMPORTANT: Regex must be compiled once using OnceLock, NOT in request path
regex-lite = "0.1"

[dev-dependencies]
# Testing utilities (if available for wasm)

[profile.release]
# Optimize for size - important for Wasm
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
# Allow some pedantic lints that are too strict
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"