[package]
name = "smart-router"
version = "0.1.0"
authors = ["aicoder"]
edition = "2021"

[lib]
name = "smart_router"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
